examples/test/testpolicy372.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy372
  namespace: namespace95
spec:
  podSelector:
    matchLabels:
      key29: value23
      key48: value5
      key8: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value14
          key34: value39
      podSelector:
        matchLabels:
          key2: value16
          key43: value24
